--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://kit.fontawesome.com/61cf1a298d.js" crossorigin="anonymous"></script>
 </body>
 </html>
